# mm-mcp

./: .dockerignore  .env.example  .gitignore  Dockerfile  LICENSE  README.md  RELEASING.md  docker-compose.yml  main.py  pyproject.toml
.github/workflows/: release.yml
.serena/: project.yml
.serena/memories/: caching_implementation_complete.md  complete_session_summary.md  limit_tests_complete.md  project_overview.md  recent_changes_and_fixes.md  reconnection_diagnostic_guide.md  reconnection_fix_complete.md  session_2025-10-03_project_completion.md  style_and_conventions.md  suggested_commands.md  task_completion_checklist.md  test_coverage_summary.md  token_optimization_enhancements.md
scripts/: release-major.sh  release-minor.sh  release-patch.sh
src/mm_mcp/: __init__.py  cache.py  config.py  mattermost.py  server.py
tests/: conftest.py  test_cache.py  test_integration.py  test_mattermost_enrichment.py  test_reconnection.py  test_tool_limits.py
